[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="NameInput" type="LineEdit" parent="."]
margin_left = 316.0
margin_top = 16.0
margin_right = 539.0
margin_bottom = 81.0
align = 1
placeholder_text = "Digite seu nome aqui"

[node name="Welcome" type="Label" parent="."]
margin_left = 568.0
margin_top = 24.0
margin_right = 766.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 97, 22 )
text = "Seja bem vinde!!"
valign = 1
autowrap = true

[node name="Button1" type="Button" parent="."]
margin_left = 317.0
margin_top = 118.0
margin_right = 497.0
margin_bottom = 182.0
text = "Aperte aqui!"

[node name="Label1" type="Label" parent="."]
visible = false
margin_left = 573.0
margin_top = 126.0
margin_right = 771.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 48, 15 )
text = "Olá! Eu estou aqui para te falar sobre listas!"
valign = 1
autowrap = true

[node name="ShowList" type="Button" parent="."]
margin_left = 320.0
margin_top = 241.0
margin_right = 500.0
margin_bottom = 305.0
text = "Mostrar minha lista"

[node name="List" type="Label" parent="."]
margin_left = 573.0
margin_top = 249.0
margin_right = 771.0
margin_bottom = 303.0
valign = 1

[node name="ShowUserList" type="Button" parent="."]
margin_left = 320.0
margin_top = 464.0
margin_right = 500.0
margin_bottom = 528.0
text = "Mostrar sua lista"

[node name="UserList" type="Label" parent="."]
margin_left = 573.0
margin_top = 472.0
margin_right = 771.0
margin_bottom = 526.0
text = "
"
valign = 1
autowrap = true

[node name="UserListInput" type="LineEdit" parent="."]
margin_left = 319.0
margin_top = 364.0
margin_right = 712.0
margin_bottom = 429.0
align = 1
placeholder_text = "Crie sua lista aqui, separe os itens por vírgula"

[connection signal="text_changed" from="NameInput" to="." method="_on_NameInput_text_changed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="ShowList" to="." method="_on_ShowList_pressed"]
[connection signal="pressed" from="ShowUserList" to="." method="_on_ShowUserList_pressed"]
